--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,14 @@
 name: Build Android APK
-on: [push] # سيبدأ البناء بمجرد ضغط "Save" على الملفات
+on: [push] 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4 # تحديث للإصدار الرابع
       - name: Setup Node
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v4 # تحديث للإصدار الرابع
+        with:
+          node-version: '20'
       - name: Install Dependencies
         run: |
           npm install
@@ -15,7 +17,7 @@ jobs:
         run: |
           cd android && ./gradlew assembleDebug
       - name: Upload APK
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4 # تحديث للإصدار الرابع لحل المشكلة
         with:
           name: Nippur-Connect-V1
           path: android/app/build/outputs/apk/debug/app-debug.apk
