--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@capacitor/core": "latest",
     "@capacitor/android": "latest",
+    "@capacitor/cli": "latest",
     "@capacitor-community/udp": "latest",
     "@capacitor/local-notifications": "latest"
   }
