--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,7 @@ jobs:
         run: |
           npm install
           npx cap add android
+          npx cap sync android
       - name: Build APK
         run: |
           cd android && ./gradlew assembleDebug
