Rename app and update dependencies in package.json

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "nippur.connect.app",
+  "name": "nippur-connect",
   "version": "1.0.0",
-  "description": "Nippur Connect UDP Receiver",
+  "private": true,
   "dependencies": {
-    "@capacitor/core": "^6.0.0",
     "@capacitor/android": "^6.0.0",
     "@capacitor/cli": "^6.0.0",
-    "@capacitor-community/udp": "^5.0.0",
+    "@capacitor/core": "^6.0.0",
+    "@capacitor-community/udp": "5.0.0",
     "@capacitor/local-notifications": "^6.0.0"
   }
 }
